# quickseek

./: .gitignore  .quickseekignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.cpp
.github/workflows/: ci.yml
cmake/: quickseekConfig.cmake.in
config/: .clang-format  .clang-tidy
docs/: DESIGN.md  USAGE.md  contributing.md  design-notes.md  testing-guide.md  usage-guide.md
include/: index.h  search.h
include/quickseek/: file_record.h  format.h  index.h  search.h
scripts/: install-hooks.sh  pre-commit
src/: format.cpp  index.cpp  search.cpp
test/: CMakeLists.txt  format_tests.cpp  index_tests.cpp  quickseek_tests.cpp  search_tests.cpp
test/support/: test_utils.h
tools/: quickseek_cli.cpp
